# kdeploy

./: .gitignore  LICENSE  README.md  install-dev.sh  pyproject.toml  setup.py
examples/: kdeploy.yaml
examples/apps/myapp/: config.yml
examples/apps/myapp/backend/: config.yml
examples/apps/myapp/backend/templates/: deployment.yml  secret.yml  service.yml
examples/apps/myapp/frontend/: config.yml
examples/apps/myapp/frontend/templates/: deployment.yml  ingress.yml  service.yml
kdeploy/: __init__.py  cli.py  config.py  k8s.py  plugins.py  template.py  utils.py
kdeploy/commands/: __init__.py  build.py  deploy.py  list_apps.py  status.py
plugins/: __init__.py
